Fix broken alt tag

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 <br><br><br>
 <img alt="The Cheat" src="/imgs/the-cheat.png">
 <br><br><br>
-<img alt-"Not bad... for a human" src="/imgs/for-a-human.png">
+<img alt="Not bad... for a human" src="/imgs/for-a-human.png">
 <br><br><br>
 <img alt="Deal with it" src="/imgs/deal-with-it.gif">
 <br><br><br>
