Sean holding a CRDT.

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
 <br><br><br>
 <img alt="Cuttlefish" src="/imgs/cuttlefish.png">
 <br><br><br>
+<img alt="CRDT" src="/imgs/crdt.png">
+<br><br><br>
 <img alt="Fruity Pebbles" src="/imgs/fruity-pebbles.png">
 <br><br><br>
 <img alt="Sega Genesis" src="/imgs/sega-genesis.png">
