--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 <br><br><br>
 <img alt="Pocket Z" src="/imgs/pocket-z.png">
 <br><br><br>
+<img alt="Databass" src="/imgs/databass.png">
+<br><br><br>
 <img alt="Chewbacca" src="/imgs/chewbacca.jpg">
 <br><br><br>
 <img alt="The Stanley Cup" src="/imgs/stanley-cup.png">
