Sean holding a platypus.

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,8 @@
 <br><br><br>
 <img alt="Not bad... for a human" src="/imgs/for-a-human.png">
 <br><br><br>
+<img alt="Platypus" src="/imgs/platypus.jpg">
+<br><br><br>
 <img alt="Deal with it" src="/imgs/deal-with-it.gif">
 <br><br><br>
 <a href="https://twitter.com/hashtag/SeanCribbsHoldingThings?src=hash">Make your own:</a>
