Sean holding a fire extinguisher.

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,8 @@
 <br><br><br>
 <img alt="Platypus" src="/imgs/platypus.jpg">
 <br><br><br>
+<img alt="Fire Extinguisher" src="fire-extinguisher.jpg">
+<br><br><br>
 <img alt="Deal with it" src="/imgs/deal-with-it.gif">
 <br><br><br>
 <a href="https://twitter.com/hashtag/SeanCribbsHoldingThings?src=hash">Make your own:</a>
