Sean holding infinity.

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,9 @@
 <br><br><br>
 <img alt="Platypus" src="/imgs/platypus.jpg">
 <br><br><br>
-<img alt="Fire Extinguisher" src="fire-extinguisher.jpg">
+<img alt="Fire Extinguisher" src=".imgs/fire-extinguisher.jpg">
+<br><br><br>
+<img alt="Infinity" src="/imgs/infinity.jpg">
 <br><br><br>
 <img alt="Deal with it" src="/imgs/deal-with-it.gif">
 <br><br><br>
