Sean holding a thermal detonator.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 <center>
 <img alt="A Bird" src="/imgs/bird.png">
 <br><br><br>
+<img alt="Thermal Detonator" src="/imgs/thermal-detonator.png">
+<br><br><br>
 <img alt="Mario Batali" src="/imgs/mario-batali.png">
 <br><br><br>
 <img alt="Paula Deen and Butter Cow" src="/imgs/paula-deen.png">
