Sean holding the antidote.

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,9 @@
 <br><br><br>
 <img alt="Platypus" src="/imgs/platypus.jpg">
 <br><br><br>
-<img alt="Fire Extinguisher" src=".imgs/fire-extinguisher.jpg">
+<img alt="Fire Extinguisher" src="/imgs/fire-extinguisher.jpg">
+<br><br><br>
+<img alt="The Antidote" src="/imgs/the-antidote.png">
 <br><br><br>
 <img alt="Infinity" src="/imgs/infinity.jpg">
 <br><br><br>
