Make your own links to github repo.

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 <br><br><br>
 <img alt="Deal with it" src="/imgs/deal-with-it.gif">
 <br><br><br>
-<a href="https://twitter.com/hashtag/SeanCribbsHoldingThings?src=hash">Make your own:</a>
+<a href="https://github.com/SeanTAllen/seancribbsholdingthings.com">Make your own:</a>
 <br><br><br>
 <img alt="Make your own" src="/imgs/make-your-own.jpg">
 </center>
