--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 </head>
 <body>
 <center>
+<a href="https://twitter.com/hashtag/SeanCribbsHoldingThings?src=hash">In the beginning...</a>
+<br><br><br>
 <img alt="A Bird" src="/imgs/bird.png">
 <br><br><br>
 <img alt="Thermal Detonator" src="/imgs/thermal-detonator.png">
