--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
 <br><br><br>
 <img alt="Databass" src="/imgs/databass.png">
 <br><br><br>
+<img src="Groundhog" src="/imgs/groundhog.jpg">
+<br><br><br>
 <img alt="Chewbacca" src="/imgs/chewbacca.jpg">
 <br><br><br>
 <img alt="The Stanley Cup" src="/imgs/stanley-cup.png">
