Fix the groundhog.

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 <br><br><br>
 <img alt="Databass" src="/imgs/databass.png">
 <br><br><br>
-<img src="Groundhog" src="/imgs/groundhog.jpg">
+<img alt="Groundhog" src="/imgs/groundhog.jpg">
 <br><br><br>
 <img alt="Chewbacca" src="/imgs/chewbacca.jpg">
 <br><br><br>
