Adding link to rude-boy.jpg.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 <center>
 <a href="https://twitter.com/hashtag/SeanCribbsHoldingThings?src=hash">In the beginning...</a>
 <br><br><br>
+<img alt="Rude Boy" src="/imgs/rude-boy.jpg">
+<br><br><br>
 <img alt="A Bird" src="/imgs/bird.png">
 <br><br><br>
 <img alt="Thermal Detonator" src="/imgs/thermal-detonator.png">
