--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 <br><br><br>
 <img alt="Rude Boy" src="/imgs/rude-boy.jpg">
 <br><br><br>
+<img alt="Pipe" src="/imgs/pipe.png">
+<br><br><br>
 <img alt="Chewbacca" src="/imgs/chewbacca.jpg">
 <br><br><br>
 <img alt="The Stanley Cup" src="/imgs/stanley-cup.png">
