--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
 <br><br><br>
 <img alt="Pipe" src="/imgs/pipe.png">
 <br><br><br>
+<img alt="Nuprin" src="/imgs/nuprin.png">
+<br><br><br>
 <img alt="Chewbacca" src="/imgs/chewbacca.jpg">
 <br><br><br>
 <img alt="The Stanley Cup" src="/imgs/stanley-cup.png">
