--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,10 @@
 <br><br><br>
 <img alt="Nuprin" src="/imgs/nuprin.png">
 <br><br><br>
+<img alt="Cupoccino" src="/imgs/cupoccino.png">
+<br><br><br>
+<img alt="Shipping Container" src="/imgs/shipping-container.jpg">
+<br><br><br>
 <img alt="Chewbacca" src="/imgs/chewbacca.jpg">
 <br><br><br>
 <img alt="The Stanley Cup" src="/imgs/stanley-cup.png">
