Sean holding Pluto.

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
 <br><br><br>
 <img alt="Groundhog" src="/imgs/groundhog.jpg">
 <br><br><br>
+<img alt="Pluto" src="/imgs/pluto.jpg">
+<br><br><br>
 <img alt="Rude Boy" src="/imgs/rude-boy.jpg">
 <br><br><br>
 <img alt="Pipe" src="/imgs/pipe.png">
