--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,8 @@
 <br><br><br>
 <img alt="A Turd" src="/imgs/turd.jpg">
 <br><br><br>
+<img alt="A Shuttle" src="/imgs/shuttle.png">
+<br><br><br>
 <img alt="Not bad... for a human" src="/imgs/for-a-human.png">
 <br><br><br>
 <img alt="Platypus" src="/imgs/platypus.jpg">
