Sean holding a balloon horse.

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
 <br><br><br>
 <img alt="Pluto" src="/imgs/pluto.jpg">
 <br><br><br>
+<img alt="Balloon Horse" src="/imgs/balloon-horse.jpg">
+<br><br><br>
 <img alt="Rude Boy" src="/imgs/rude-boy.jpg">
 <br><br><br>
 <img alt="Pipe" src="/imgs/pipe.png">
