Sean holding a free monad.

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
 <br><br><br>
 <img alt="Balloon Horse" src="/imgs/balloon-horse.jpg">
 <br><br><br>
+<img alt="Free Monad" src="/imgs/monad.jpg">
+<br><br><br>
 <img alt="Rude Boy" src="/imgs/rude-boy.jpg">
 <br><br><br>
 <img alt="Pipe" src="/imgs/pipe.png">
