Sean holding a ballet dancer.

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
 <br><br><br>
 <img alt="Cupoccino" src="/imgs/cupoccino.png">
 <br><br><br>
+<img alt="Ballet Dancer" src="/imgs/ballet-dancer.jpg">
+<br><br><br>
 <img alt="Shipping Container" src="/imgs/shipping-container.jpg">
 <br><br><br>
 <img alt="Chewbacca" src="/imgs/chewbacca.jpg">
