Sean holding a deep dish pizza.

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,8 @@
 <br><br><br>
 <img alt="Ballet Dancer" src="/imgs/ballet-dancer.jpg">
 <br><br><br>
+<img alt="Deep Dish Pizza" src="/imgs/deep-dish-pizza.png">
+<br><br><br>
 <img alt="Shipping Container" src="/imgs/shipping-container.jpg">
 <br><br><br>
 <img alt="Chewbacca" src="/imgs/chewbacca.jpg">
