--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,8 @@
 <br><br><br>
 <img alt="Pipe" src="/imgs/pipe.png">
 <br><br><br>
+<img alt="Roald Dahl" src="/imgs/roald-dahl.png">
+<br><br><br>
 <img alt="Nuprin" src="/imgs/nuprin.png">
 <br><br><br>
 <img alt="Cupoccino" src="/imgs/cupoccino.png">
