Sean holding a doge head.

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,8 @@
 <br><br><br>
 <img alt="The Stanley Cup" src="/imgs/stanley-cup.png">
 <br><br><br>
+<img alt="Doge" src="/imgs/doge.jpg">
+<br><br><br>
 <img alt="Cuttlefish" src="/imgs/cuttlefish.png">
 <br><br><br>
 <img alt="CRDT" src="/imgs/crdt.png">
