An argv0 joint.

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,8 @@
 <br><br><br>
 <img alt="The Cheat" src="/imgs/the-cheat.png">
 <br><br><br>
+<img src="Not Infinity" src="/imgs/smaller-sean.jpg">
+<br><br><br>
 <img alt="A Turd" src="/imgs/turd.jpg">
 <br><br><br>
 <img alt="A Shuttle" src="/imgs/shuttle.png">
