--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,8 @@
 <br><br><br>
 <img src="Not Infinity" src="/imgs/smaller-sean.jpg">
 <br><br><br>
+<img src="?" src="/imgs/abstract.png">
+<br><br><br>
 <img alt="A Turd" src="/imgs/turd.jpg">
 <br><br><br>
 <img alt="A Shuttle" src="/imgs/shuttle.png">
