--- a/src/index.html
+++ b/src/index.html
@@ -66,9 +66,9 @@
 <br><br><br>
 <img alt="The Cheat" src="/imgs/the-cheat.png">
 <br><br><br>
-<img src="Not Infinity" src="/imgs/smaller-sean.jpg">
+<img alt="Not Infinity" src="/imgs/smaller-sean.jpg">
 <br><br><br>
-<img src="?" src="/imgs/abstract.png">
+<img alt="?" src="/imgs/abstract.png">
 <br><br><br>
 <img alt="A Turd" src="/imgs/turd.jpg">
 <br><br><br>
