--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,8 @@
 <br><br><br>
 <img alt="The Cheat" src="/imgs/the-cheat.png">
 <br><br><br>
+<img alt="Medusa" src="/imgs/medusa.jpg">
+<br><br><br>
 <img alt="Not Infinity" src="/imgs/smaller-sean.jpg">
 <br><br><br>
 <img alt="?" src="/imgs/abstract.png">
