--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Sean Cribbs Holding Things</title>
 </head>
-<body>
+<body bgcolor="#000000" text="#FFFFFF" background="/imgs/stars-background.gif">
 <center>
 <a href="https://twitter.com/hashtag/SeanCribbsHoldingThings?src=hash">In the beginning...</a>
 <br><br><br>
