Look Ma! An Award!

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <title>Sean Cribbs Holding Things</title>
 </head>
 <body bgcolor="#000000" text="#FFFFFF" background="/imgs/stars-background.gif">
+<img alt="Look Ma! An award" src="/imgs/yahoo-pick-of-the-week.gif" style="position: absolute; top: 0; right: 0; border: 0;">
 <center>
 <a href="https://twitter.com/hashtag/SeanCribbsHoldingThings?src=hash">In the beginning...</a>
 <br><br><br>
