Sean holding many other things.

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,14 @@
 <br><br><br>
 <img alt="A Turd" src="/imgs/turd.jpg">
 <br><br><br>
+<img src="Phantasm" src="/imgs/phantasm.jpg">
+<br><br><br>
+<img src="Drinks" src="/imgs/drinks.jpg">
+<br><br><br>
+<img src="Math" src="/imgs/math.jpg">
+<br><br><br>
+<img src="All Files" src="/imgs/all-files.png">
+<br><br><br>
 <img alt="A Shuttle" src="/imgs/shuttle.png">
 <br><br><br>
 <img alt="Not bad... for a human" src="/imgs/for-a-human.png">
