--- a/src/index.html
+++ b/src/index.html
@@ -77,13 +77,13 @@
 <br><br><br>
 <img alt="A Turd" src="/imgs/turd.jpg">
 <br><br><br>
-<img src="Phantasm" src="/imgs/phantasm.jpg">
+<img alt="Phantasm" src="/imgs/phantasm.jpg">
 <br><br><br>
-<img src="Drinks" src="/imgs/drinks.jpg">
+<img alt="Drinks" src="/imgs/drinks.jpg">
 <br><br><br>
-<img src="Math" src="/imgs/math.jpg">
+<img alt="Math" src="/imgs/math.jpg">
 <br><br><br>
-<img src="All Files" src="/imgs/all-files.png">
+<img alt="All Files" src="/imgs/all-files.png">
 <br><br><br>
 <img alt="A Shuttle" src="/imgs/shuttle.png">
 <br><br><br>
