--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,8 @@
 <br><br><br>
 <img alt="The Cheat" src="/imgs/the-cheat.png">
 <br><br><br>
+<img alt="Liquor" src="/imgs/liquor.jpg">
+<br><br><br>
 <img alt="Up" src="/imgs/up.jpg">
 <br><br><br>
 <img alt="Medusa" src="/imgs/medusa.jpg">
