Sean holding ghost things.

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,8 @@
 <br><br><br>
 <img alt="Liquor" src="/imgs/liquor.jpg">
 <br><br><br>
+<img alt="Ghost Things" src="/imgs/ghost-things.jpg">
+<br><br><br>
 <img alt="Up" src="/imgs/up.jpg">
 <br><br><br>
 <img alt="Medusa" src="/imgs/medusa.jpg">
