--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
 <br><br><br>
 <img alt="Balloon Horse" src="/imgs/balloon-horse.jpg">
 <br><br><br>
+<img alt="Shinebox" src="/imgs/shinebox.png">
+<br><br><br>
 <img alt="Free Monad" src="/imgs/monad.jpg">
 <br><br><br>
 <img alt="Rude Boy" src="/imgs/rude-boy.jpg">
