--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,8 @@
 <br><br><br>
 <img alt="Infinity" src="/imgs/infinity.jpg">
 <br><br><br>
+<img alt="Tarz" src="/imgs/tarz.jpg">
+<br><br><br>
 <img alt="Deal with it" src="/imgs/deal-with-it.gif">
 <br><br><br>
 <a href="https://github.com/SeanTAllen/seancribbsholdingthings.com">Make your own:</a>
