--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,8 @@
 <br><br><br>
 <img alt="Deal with it" src="/imgs/deal-with-it.gif">
 <br><br><br>
+<img alt="Availability" src="./imgs/availability.jpg">
+<br><br><br>
 <a href="https://github.com/SeanTAllen/seancribbsholdingthings.com">Make your own:</a>
 <br><br><br>
 <img alt="Make your own" src="/imgs/make-your-own.jpg">
