--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
 <br><br><br>
 <img alt="Deal with it" src="/imgs/deal-with-it.gif">
 <br><br><br>
-<img alt="Availability" src="./imgs/availability.jpg">
+<img alt="Availability" src="/imgs/availability.jpg">
 <br><br><br>
 <a href="https://github.com/SeanTAllen/seancribbsholdingthings.com">Make your own:</a>
 <br><br><br>
