Sean holding minions.

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
 <br><br><br>
 <img alt="Free Monad" src="/imgs/monad.jpg">
 <br><br><br>
+<img alt="Minions" src="/imgs/minions.jpg">
+<br><br><br>
 <img alt="Rude Boy" src="/imgs/rude-boy.jpg">
 <br><br><br>
 <img alt="Pipe" src="/imgs/pipe.png">
