Sean holding still more things.

--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,10 @@
 <br><br><br>
 <img alt="Platypus" src="/imgs/platypus.jpg">
 <br><br><br>
+<img alt="Footballs" src="/imgs/footballs.jpg">
+<br><br><br>
+<img alt="A Mutex" src="/imgs/mutex.jpg">
+<br><br><br>
 <img alt="Fire Extinguisher" src="/imgs/fire-extinguisher.jpg">
 <br><br><br>
 <img alt="The Antidote" src="/imgs/the-antidote.png">
