--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,8 @@
 <br><br><br>
 <img alt="Fire Extinguisher" src="/imgs/fire-extinguisher.jpg">
 <br><br><br>
+<img alt="Frankenstein" src="/imgs/frankenstein.png">
+<br><br><br>
 <img alt="The Antidote" src="/imgs/the-antidote.png">
 <br><br><br>
 <img alt="Infinity" src="/imgs/infinity.jpg">
