Sean holding an anvil.

--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,8 @@
 <br><br><br>
 <img alt="Frankenstein" src="/imgs/frankenstein.png">
 <br><br><br>
+<img alt="Anvil" src="/imgs/anvil.jpg">
+<br><br><br>
 <img alt="The Antidote" src="/imgs/the-antidote.png">
 <br><br><br>
 <img alt="Infinity" src="/imgs/infinity.jpg">
