Sean holding le petit prince.

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,8 @@
 <br><br><br>
 <img alt="Liquor" src="/imgs/liquor.jpg">
 <br><br><br>
+<img alt="Le Petit Prince" src="/imgs/le-petit-prince.jpg">
+<br><br><br>
 <img alt="Ghost Things" src="/imgs/ghost-things.jpg">
 <br><br><br>
 <img alt="Up" src="/imgs/up.jpg">
