Sean holding more things.

--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,10 @@
 <br><br><br>
 <img alt="Fire Extinguisher" src="/imgs/fire-extinguisher.jpg">
 <br><br><br>
+<img alt="Least Upper Bounds" src="/imgs/least-upper-bounds.jpg">
+<br><br><br>
+<img alt="Bishop" src="/imgs/bishop.jpg">
+<br><br><br>
 <img alt="Frankenstein" src="/imgs/frankenstein.png">
 <br><br><br>
 <img alt="Anvil" src="/imgs/anvil.jpg">
